[gd_scene load_steps=12 format=3 uid="uid://lhlklylca50m"]

[ext_resource type="Script" path="res://Resources/Entities/Player/Player.gd" id="1_kmike"]
[ext_resource type="Script" path="res://Resources/Entities/Player/Player_States/State_Manager.gd" id="2_c5aqi"]
[ext_resource type="Script" path="res://Resources/Entities/Player/Player_States/Idle_State.gd" id="3_f5lbm"]
[ext_resource type="Script" path="res://Resources/Entities/Player/Player_States/Walk_State.gd" id="4_fu07a"]
[ext_resource type="Script" path="res://Resources/Entities/Player/Player_States/Crouch_State.gd" id="6_ib15b"]
[ext_resource type="Script" path="res://Resources/Entities/Player/Player_States/Jump_State.gd" id="7_b1yw5"]
[ext_resource type="Script" path="res://Resources/Entities/Player/Player_States/Stomp_State.gd" id="8_fl03g"]
[ext_resource type="Script" path="res://Resources/Entities/Player/Alterators/HeightAlterator.gd" id="8_rgs2k"]
[ext_resource type="Script" path="res://Resources/Entities/Player/Player_States/Fall_State.gd" id="8_xbf4w"]

[sub_resource type="CapsuleShape3D" id="15"]
radius = 0.45
height = 1.6

[sub_resource type="CylinderShape3D" id="CylinderShape3D_hata5"]
height = 0.01

[node name="Player" type="CharacterBody3D" groups=["Player"]]
collision_mask = 2
input_ray_pickable = false
script = ExtResource("1_kmike")
gravity_multiplier = 0.05

[node name="Scripts" type="Node" parent="."]

[node name="StateManager" type="Node" parent="Scripts" node_paths=PackedStringArray("starting_state", "idle_state", "walk_state", "crouch_state", "jump_state", "fall_state", "stomp_state")]
editor_description = "Manages Player states;
Stores the starting (default) State; the state that the Player is spawned in
Stores all the States, in case the current_state has to be changed by a Node/script that isn't the StateManager
Can change the current_state on behest of an individual State"
script = ExtResource("2_c5aqi")
starting_state = NodePath("Idle")
idle_state = NodePath("Idle")
walk_state = NodePath("Walk")
crouch_state = NodePath("Crouch")
jump_state = NodePath("Jump")
fall_state = NodePath("Fall")
stomp_state = NodePath("Stomp")

[node name="Idle" type="Node" parent="Scripts/StateManager" node_paths=PackedStringArray("walk_state", "crouch_state", "jump_state", "fall_state")]
script = ExtResource("3_f5lbm")
walk_state = NodePath("../Walk")
crouch_state = NodePath("../Crouch")
jump_state = NodePath("../Jump")
fall_state = NodePath("../Fall")

[node name="Walk" type="Node" parent="Scripts/StateManager" node_paths=PackedStringArray("idle_state", "crouch_state", "jump_state", "fall_state")]
script = ExtResource("4_fu07a")
idle_state = NodePath("../Idle")
crouch_state = NodePath("../Crouch")
jump_state = NodePath("../Jump")
fall_state = NodePath("../Fall")

[node name="Crouch" type="Node" parent="Scripts/StateManager" node_paths=PackedStringArray("idle_state", "walk_state", "jump_state", "fall_state")]
script = ExtResource("6_ib15b")
speed_multiplier = 0.6
idle_state = NodePath("../Idle")
walk_state = NodePath("../Walk")
jump_state = NodePath("../Jump")
fall_state = NodePath("../Fall")

[node name="Jump" type="Node" parent="Scripts/StateManager" node_paths=PackedStringArray("idle_state", "walk_state", "crouch_state", "stomp_state")]
script = ExtResource("7_b1yw5")
idle_state = NodePath("../Idle")
walk_state = NodePath("../Walk")
crouch_state = NodePath("../Crouch")
stomp_state = NodePath("../Stomp")

[node name="Timer" type="Timer" parent="Scripts/StateManager/Jump"]
process_callback = 0
wait_time = 0.05
one_shot = true

[node name="Fall" type="Node" parent="Scripts/StateManager" node_paths=PackedStringArray("idle_state", "walk_state", "crouch_state", "stomp_state")]
script = ExtResource("8_xbf4w")
idle_state = NodePath("../Idle")
walk_state = NodePath("../Walk")
crouch_state = NodePath("../Crouch")
stomp_state = NodePath("../Stomp")

[node name="Stomp" type="Node" parent="Scripts/StateManager" node_paths=PackedStringArray("idle_state", "walk_state", "jump_state")]
script = ExtResource("8_fl03g")
idle_state = NodePath("../Idle")
walk_state = NodePath("../Walk")
jump_state = NodePath("../Jump")

[node name="HeightAlterator" type="Node" parent="Scripts"]
editor_description = "Alters the height of:
-Collider
-FeetCollider
-FloorCast
-Head
nodes, for ex. the Crouch State
Initially a part of the Crouch state; soon made a separate script for ease of use and decluttering"
script = ExtResource("8_rgs2k")

[node name="UIController" type="Node" parent="Scripts"]

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)
shape = SubResource("15")

[node name="FeetCollider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
shape = SubResource("CylinderShape3D_hata5")

[node name="FloorCast" type="RayCast3D" parent="."]
enabled = false
target_position = Vector3(0, -0.25, 0)
collision_mask = 2
hit_from_inside = true
debug_shape_custom_color = Color(1, 1, 1, 1)
debug_shape_thickness = 5

[node name="Head" type="Marker3D" parent="."]
editor_description = "Holds the Camera as its child
Change it's Y position (height) to make the camera move along with it,
ex.: crouching"
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4, 0)

[node name="PlayerCamera" type="Camera3D" parent="Head"]
current = true
fov = 90.0

[node name="TPMarker" type="Marker3D" parent="Head"]
editor_description = "Marks the position of the Camera's third person view"
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2)
